--- a/TenderStore1/src/main/webapp/resources/CSS/contact.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/contact.css
@@ -11,11 +11,7 @@
 /* Info section*/
 	.ds{text-align: cetner;}
 	body{ padding-top: 80px; }
-	body {  height: 100%;  text-align: left;  padding-top: 80px;}
-	.td{text-align: center; width:50%;}
-	.tb{background-color: white; border:1px solid; border-color: #c0c0c0;  border-radius: 25px; font-size: 15px; }
-	.input-group-addon{background-color: white}
-	.btn-edit{background-color: rgb(255, 173, 51,0.7);}
-	.btn-danger{background-color: rgb(244, 83, 66,0.5);}  
+	body {    text-align: left;  padding-top: 80px;}
+
 /* footer*/  
-	.wrapper{background-color: #333; height: 40px; color : white;}      
+	.wrapper{background-color: #333; height: 40px; color : white;}        
