--- a/TenderStore1/src/main/webapp/resources/CSS/contact.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/contact.css
@@ -9,9 +9,16 @@
 	#search-form{padding-top:9px; margin-left:25%;}
 	
 /* Info section*/
-	.ds{text-align: cetner;}
+
 	body{ padding-top: 80px; }
 	body {    text-align: left;  padding-top: 80px;}
+	.input-group-addon{background-color: white}
+	
+	.td{text-align: center; width:50%;}
+	
+	.input-group-addon{background-color: white}
 
 /* footer*/  
 	.wrapper{background-color: #333; height: 40px; color : white;}        
+	
+	 
