--- a/TenderStore1/src/main/webapp/resources/CSS/tenders.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/tenders.css
@@ -24,15 +24,31 @@
 	body {  
 		height: 100%;  
 		text-align: center;  
-		padding-top: 80px;
+		padding-top: 50px;
+		background-color: #374954;
 		}
-	.container{
-		width:50vw;
-		}
-	
+
 		
-/* Tenders info*/
+/* Tenders info*/ 
 	
+	.overflow{  
+		height:10 px; 
+		overflow: hidden;  
+		text-overflow: ellipsis; 
+		}
+	.tbl{
+		width: 95.5%; 
+		}
+	.td {
+		text-align: center; 
+		width:50%;
+		height: 30px;
+		border-bottom: 1px solid; 
+		border-top: 1px solid;
+		border-color: rgb(224, 224, 224);  
+		margin:25%;
+		}
+
 	.table{
 		background-color: rgb(35, 12, 12,0.4);
 		}
@@ -64,14 +80,11 @@
 		width: 15%;
 		background-color: rgba(50,64,0,0.05);
 		text-overflow: ellipsis; 
-		overflow: hidden;
 		height: 60px;
 		} 
 	.btnName{
 		width: 30%;
 		background-color: rgba(50,0,160,0.05); 
-		text-overflow: ellipsis; 
-		overflow: hidden;
 		height: 60px;
 		}    
 	.btnCity{
@@ -98,13 +111,10 @@
 	.lower{
 		font-size: 10px;
 		}
-	.divider{
-		color:white;
-		}
 	.btn-group{
 		width:80vw; 
-		margin-right: 1vw;
-		margin-left: 1vw; 
+		margin-right: 2%;
+		margin-left: 2%; 
 		padding-top: 1px;
 		}   
 
@@ -124,7 +134,6 @@
 	.area {
 	    position: relative;
 	    font-weight: bold;
-	    /* you may want to set the width/height here as well*/
 		}
 	
 	.fixed {
@@ -138,13 +147,64 @@
 	    font-size: 20px;
 	    color: rgba(140, 2, 11, 0.8);
 		}
+		
 	.popup{
 		position: absolute;
 	    padding: 5px;
+	    top: 50px;
 	    z-index: 9999;
 	    background-color: white;
 	    display: none;
 	    font-size: 15px;
-	    color: rgba(140, 2, 11, 0.8);
+	    color: rgb(149, 153, 150);
 		}
 	}
+	
+/* Filters style */
+	.tdFilters {
+		border: 3px solid; 
+		border-color: rgb(0,0,0);  
+	}
+	.divFilters{
+		
+		}
+	#filtersToggle{
+		width: 100%;
+		height: 40px;
+		background: linear-gradient(45deg, rgba(103, 0, 31, .8), rgba(34, 101, 163, .5)); 
+ 		background-size: cover;
+ 		margin-bottom: 20px;
+		}
+		
+		
+		
+		
+		
+		
+		.dropdown-menu > li > .dropdown-menu-item {
+   clear: both;
+    color: #333;
+    display: block;
+    padding: 3px 20px;
+    white-space: nowrap;
+    margin: 5px 0;
+    width: 100%;
+    text-align: left;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    -moz-user-select: none;
+    user-select: none;
+}
+.dropdown-menu > li:hover .dropdown-menu-item,
+.dropdown-menu > li:focus .dropdown-menu-item{
+    background-color: #f5f5f5;
+    color: #262625;
+}
+.dropdown-menu > li > .dropdown-menu-item.checkbox {
+    margin: 0;
+    font-weight: normal;
+}
+.dropdown-menu > li > .dropdown-menu-item.checkbox input {
+    display: none;
+}
