--- a/TenderStore1/src/main/webapp/resources/CSS/contact.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/contact.css
@@ -2,108 +2,179 @@
 
 /* Navigation*/
 
-	.navbar-fixed-bottom {
-		background-color: #333; 
-		}
-	#nav1 {
-		background-image: none;
-		}  
-	#AddTender {
-		background-color: rgba(30,75,39,0.5); color: white;
-		}
-	#new {
-		word-break: break-all;
-		}
-	#search-form {
-		padding-top:9px; margin-left:25%;
-		}
-		
+	#header{
+		width: 100%;
+		background-color: rgba(260,260,260, 0.5);
+		overflow:auto;
+		height:40px;
+	}
+	#home{
+		height:100%;
+		width: 100%;
+		border: none;
+		float:left;
+		background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
+ 		background-blend-mode: normal, lighten, soft-light;
+	}
+	.headerSection{
+		float:left;
+		height:100%;
+		width:7%;
+	}
+	.headerSectionRight{
+		float:right;
+		height:100%;
+		width:6%;
+		background-color: rgba(260,260,260, 0.5);
+		border-right: 1px solid darkgrey;
+		text-align: center;
+		padding-top: 10px;
+	}
+
+	
 /* Info section*/
 
 	body {
-		text-align: center;  
-		padding-top: 80px;
+		text-align: center;
+    background-image: url('images/background-concrete-dirty-984540.jpg');
 		}
 	.mainDiv{
-		border: 1px solid; 
-		border-color: rgb(220, 220, 220);
 		border-radius: 7px;
 		width:70%;
 		margin-left:5%;
-		background-color: rgb(92, 86, 160,0.03);
+		margin-top:2%;
+		background-color: rgb(220, 220, 220,0.85);
 		float: left;
-		
+   		padding: 3%;
 	}
 	.shadow{
-		-moz-box-shadow: 5px 5px 5px rgb(224, 224, 224);
-		-webkit-box-shadow: 5px 5px 5px rgb(224, 224, 224);
-		box-shadow: 5px 5px 5px rgb(224, 224, 224);
-		}
-	.marg{
-		margin: 4%;
+		box-shadow: 2px 2px 2px rgb(224, 224, 224,0.6);
 		}
 	.tbl{
 		width: 100%;
-		background-color: white; 
+		background-color: white;
 		}
 	.paddingTop{
 		margin-top: 5%;
 		}
 	.divTenders{
-		width:20%; 
+		margin-top:2%;
+		width:20%;
+		background-color: rgb(220, 220, 220,0.85);
 		float: left;
 		margin-left:2%;
-		background-color: rgb(247, 247, 247);
-		border: 1px solid; 
-		border-color: rgb(220, 220, 220);
-		border-radius: 7px;
+   		padding: 1%;
+   		margin-top:2%;
+		border-radius: 4px;
 		}
-	
-	.td {
-		text-align: center; 
-		width:50%;
-		height: 30px;
-		border-bottom: 1px solid; 
-		border-top: 1px solid;
-		border-color: rgb(224, 224, 224);  
-		margin:25%;
-		background-color: white; 
+
+		.paramDiv{
+			float: left;
+			width: 40%;
+			text-align: center;
+			font-size: 16px;
+			border-right: 1px solid darkgrey;
 		}
-	.input-group-addon {
-		background-color: white
+		.dataDiv{
+			text-align: center;
+			float: left;
+			width: 60%;
+			font-size: 16px;
 		}
-	
-	.td {
-		text-align: center; 
-		width:50%;
+		.rowr{
+			overflow:auto;
+			padding-top: 3px;
+			padding-bottom: 3px;
+			border: 1px solid lightgrey;
+			border-radius: 4px;
+			background-color: rgb(224, 224, 224,0.5);
+			margin-bottom: 2%;
 		}
-	
-	.input-group-addon {
-		background-color: white
+		.tenderDiv{
+			overflow: hidden;
+			margin-top: 5%;
 		}
-	
-	#dateinfo {
-		font-size: 11px;
+		.commentsDiv{
+			height: auto;
+			overflow: auto;
+			border: 1px solid lightgrey;
+			border-radius: 4px;
+			margin-top: 4%;
+			background-color: rgb(224, 224, 224,0.5);
 		}
-	.commenttext{
-		text-overflow: ellipsis; 
-		overflow: hidden;
-		 background-color:white; 
-		} 
-	
-	.btn-del {
-		background-color: none;
+		.commentDate{
+			overflow: auto;
+			float: left;
+			width:10%;
+			font-size: 12px;
+
 		}
-	
-/* footer*/  
+		.commenttext{
+			padding: 10px;
+			overflow: auto;
+			border-radius: 4px;
+			float: left;
+			width:75%;
+			background-color:white;
+
+		}
+		.btnDiv{
+			overflow: auto;
+			display: inline-block;
+			width:15%;
+		}
+		.btnEdit{
+			display: inline-block;
+			border:none;
+			border-radius: 4px; 
+			width:45%;
+			height:30px;
+			background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+			}.btnEdit:hover{
+				background-image: linear-gradient(to top, #84fab0 0%, #8fd3f4 100%);
+				}
+		.btn-del{
+			border:none; 
+			border-radius: 4px;
+			display: inline-block; 
+			width:45%;
+			height:30px;
+			background-image: linear-gradient(to top, #c71d6f 0%, #d09693 100%);
+			}.btn-del:hover{
+			background-image: linear-gradient(to top, #ff3700 0%, #d09693 100%);
+			}
+		
+		.btnSubmit{
+			display: inline-block;
+			border:none;
+			border-radius: 4px;
+			width:45%;
+			height:30px;
+			background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+			}.btnSubmit:hover{
+				background-image: linear-gradient(to top, #84fab0 0%, #8fd3f4 100%);
+				}
+		.textareaEdit{
+			padding: 10px;
+			overflow: auto;
+			border-radius: 4px;
+			float: left; 
+			width:75%;
+			background-color:white;
+		}
+		#submitMyForm{
+			background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+			}#submitMyForm:hover{
+			background-image: linear-gradient(to top, #84fab0 0%, #8fd3f4 100%);
+			}
+
+
+
+
+	/* footer*/
 
 	.wrapper{
-		background-color: #333; 
-		height: 40px; 
+		background-color: #333;
+		height: 40px;
 		color : white;
-		}        
-	
-	   
-	   
-	   
-	   
+		}
