--- a/TenderStore1/src/main/webapp/resources/CSS/tender.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/tender.css
@@ -1,106 +1,141 @@
 @charset "UTF-8";
 
-/* Navigation*/ 
+/* Navigation*/
 
-	.navbar-fixed-bottom{
-		background-color: #333; 
-		}
-	#nav1{
-		background-image: none;
-		}  
-	#AddTender{
-		background-color: rgba(30,75,39,0.5); 
-		color: white;
-		}
-	#new{
-		word-break: break-all;
-		}
-	#search-form{
-		padding-top:9px;
-		}
+	#header{
+		width: 100%;
+		background-color: rgba(260,260,260, 0.5);
+		overflow:auto;
+		height:40px;
+	}
+	#home{
+		height:100%;
+		width: 100%;
+		border: none;
+		float:left;
+		background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
+ 		background-blend-mode: normal, lighten, soft-light;
+	}
+	.headerSection{
+		float:left;
+		height:100%;
+		width:7%;
+	}
+	.headerSectionRight{
+		float:right;
+		height:100%;
+		width:6%;
+		background-color: rgba(260,260,260, 0.5);
+		border-right: 1px solid darkgrey;
+		text-align: center;
+		padding-top: 10px;
+	}
 	
 /* Info section*/
+body {
+  height: 100%;
+  background-image: url('tender/images/background-concrete-dirty-984540.jpg'); 
+  } 
+
 	.mainDiv{
-		border: 1px solid; 
-		border-color: rgb(220, 220, 220);
 		border-radius: 7px;
 		width:70%;
 		margin-left:5%;
-		background-color: rgb(220, 220, 220, 0.04);
+		margin-top:2%;
+		background-color: rgb(220, 220, 220,0.85);
 		float: left;
+   		padding: 3%;
 	}
-	.shadow{
-		-moz-box-shadow: 5px 5px 5px rgb(224, 224, 224);
-		-webkit-box-shadow: 5px 5px 5px rgb(224, 224, 224);
-		box-shadow: 5px 5px 5px rgb(224, 224, 224);
-		}
-	.marg{
-		margin: 4%;
-		}
-	.contDiv{
-		width:20%; 
-		background-color: rgb(247, 247, 247); 
+  .contactSection{
+		width:20%;
+		background-color: rgb(220, 220, 220,0.85);
 		float: left;
 		margin-left:2%;
+   		padding: 1%;
+   		margin-top:2%;
+		border-radius: 4px;
+		}
+		.contactDiv{
+			overflow: hidden;
+			margin-top: 5%;
+		}
+  .td {
+		text-align: center;
+		width:50%;
+		height: 30px;
+		border-bottom: 1px solid;
+		border-top: 1px solid;
+		border-color: rgb(224, 224, 224);
+		background-color: rgb(224, 224, 224,0.5);
+    font-size: 16px;
+		}
+		.paramDiv{
+			float: left;
+			width: 40%;
+			text-align: center;
+			font-size: 16px;
+			border-right: 1px solid darkgrey;
+		}
+		.dataDiv{
+			text-align: center;
+			float: left;
+			width: 60%;
+			font-size: 16px;
+		}
+		.rowr{
+			overflow:auto;
+			padding-top: 3px;
+			padding-bottom: 3px;
+			border: 1px solid lightgrey;
+			border-radius: 4px;
+			background-color: rgb(224, 224, 224,0.5);
+			margin-bottom: 2%;
+		}
+
+    #contactRef{
+      text-align: left;
+    	padding-bottom: 40px;
+			border-radius: 2px;
+    	padding: 6px;
+      background-color:none;
+    	}
+
+	.shadow{
+		box-shadow: 2px 2px 2px rgb(224, 224, 224,0.6);
 		}
 	.tbl{
 		width: 100%;
-		background-color: white; 
 		}
+
+
+    /* buttons */
 	.bt {
 		height: 30px;
 		width: 100%;
 		border: none;
 		border-radius: 4px;
-		background-color: none;     
+		background-color: none;
 		}
 	.btnEd{
-		background-color: rgb(244, 143, 66, 0.6);  
+		background-image: linear-gradient(to top, #f47442 0%, #ff9a44 100%);
 		}
 	.btnBack{
-		background-color: rgb(86, 64, 64, 0.4);  
+		background-image: linear-gradient(to top, #5e6e7a 0%, #9bc5c3 100%);
 		}
 	.btnDel{
-		background-color: rgb(214, 27, 49, 0.6);  
+		background-image: linear-gradient(to top, #911515 0%, #d09693 100%);
 		}
-	body {  
-		height: 100%;  
-		text-align: center;  
-		padding-top: 80px;
-		}
-	.td {
-		text-align: center; 
-		width:50%;
-		height: 30px;
-		border-bottom: 1px solid; 
-		border-top: 1px solid;
-		border-color: rgb(224, 224, 224);  
-		margin:25%;
-		background-color: white; 
-		}
-	
+
+
 }
-	
-	
-	#contactsTable {
-		background-color: rgb(247, 247, 247);
-		font-size: 15px; 
-		width: 100% ;
-		text-align: center;    
-		}  
-	#contactRef{
-		background-color: rgb(247, 247, 247);
-		padding-bottom: 40px;
-		box-sizing: border-box;
-	    padding: 10px;
-	    border-bottom: 1px solid; 
-		border-color: rgb(224, 224, 224);
-		}
-	
-	
+
+
+
+
+
 /* footer*/
 	.wrapper {
-		background-color: #333; 
-		height: 40px; 
+		background-color: #333;
+		height: 40px;
 		color : white;
-		}       
+		}
