--- a/TenderStore1/src/main/webapp/resources/CSS/tenders.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/tenders.css
@@ -1,157 +1,209 @@
 @charset "UTF-8";
 
 /* Navigation*/
-
-	.navbar-fixed-bottom{
-		background-color: #333; 
-		}
-	#nav1{
-		background-image: none;
-		}  
-	#AddTender{
-		background-color: rgba(30,75,39,0.5);
-		color: white;}
-	#new{
-		word-break: break-all;
-		}
-	#search-form{
-		padding-top:9px;
-		}
+	#header{
+		width: 100%;
+		background-color: rgba(260,260,260, 0.5);
+		overflow:auto;
+		height:40px;
+	}
+	.logo{
+	float:left;
+	}
+	#home{
+		height:100%;
+		width: 100%;
+		border: none;
+		float:left;
+		background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
+ 		background-blend-mode: normal, lighten, soft-light;
+	}
+	.headerSection{
+		float:left;
+		height:100%;
+		width:7%;
+		
+	}
+	.headerSectionRight{
+		float:right;
+		height:100%;
+		width:6%;
+		background-color: rgba(260,260,260, 0.5);
+		border-right: 1px solid darkgrey;
+		text-align: center;
+		padding-top: 10px;
+	}
+	#filters{
+		float:left;
+		height:100%;
+		width:10%;
+	}
 	
-	
+	#bthAddTender{
+		height:100%;
+		float:left;
+		width:5%;
+		border: none;
+		border-radius: 0px 3px 3px 0px;
+		background-image: linear-gradient(to top, #0ba360 0%, #3cba92 60%);
+		color: white;
+		float:left;
+		}#bthAddTender:hover{
+			background-image: linear-gradient(to bottom, #0ba360 0%, #3cba92 60%);
+			float:left;
+		}
+	#tenderId{
+		height:100%;
+		border: none;
+		background-color: white;
+		float:left;
+		width:30%;
+		padding-left: 1%;
+		border-radius: 3px 0px 0px 3px;
+	}
+	#filtersSectionToggle{
+		width: 100%;
+		height: 100%;
+		border: none;
+		background-image: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
+		color : lightgrey;
+		}
+				#filtersSectionToggle:hover{
+					background-image: linear-gradient(to bottom, #a3bded 0%, #6991c7 100%);
+				}
 /* Common*/
 
-	body {  
-		height: 100%;  
-		text-align: center;  
-		padding-top: 50px;
-		background-color: #374954;
+	body {
+		height: 100%;
+		background-image: url('tender/images/background-concrete-dirty-984540.jpg');
 		}
 
-		
-/* Tenders info*/ 
-	
-	.overflow{  
-		height:10 px; 
-		overflow: hidden;  
-		text-overflow: ellipsis; 
+
+
+/* colors: info: #ADB3D9, contact:  #F5F2FA, fil: #9EDFA9, cons: #A5C3D1, comp: #D9A8C5, grey: #DDDDDD, # #F5F5F2, */
+
+/* Tenders info*/
+	.btn-group{
+		margin-bottom: 1px; 
+		}
+	.tendersContainer{
+		overflow:auto;
+		margin: 3%;
+		margin-right: 2%;
+		}
+	.overflow{
+		height:10 px;
+		overflow: hidden;
+		text-overflow: ellipsis;
 		}
 	.tbl{
-		width: 95.5%; 
+		width: 99.5%;
+		background-color: rgb(226, 226, 226,0.95);
+		color:black;
 		}
-	.td {
-		text-align: center; 
+	.tenderTableData {
+		text-align: center;
 		width:50%;
 		height: 30px;
-		border-bottom: 1px solid; 
+		border-bottom: 1px solid;
 		border-top: 1px solid;
-		border-color: rgb(224, 224, 224);  
+		border-color: rgb(224, 224, 224);
 		margin:25%;
 		}
-
-	.table{
-		background-color: rgb(35, 12, 12,0.4);
-		}
 	.btn-fil{
-		background-color: rgb(12, 175, 39,0.4);
-		width: 7%;  
-		overflow: hidden; 
+		background-color:rgb(158, 223, 169,0.95);
+		width: 7%;
+		overflow: hidden;
 		height: 60px;
 		}
 	.btn-con{
-		background-color: rgb(30, 105, 140,0.4);
-		width: 7%;  
-		overflow: hidden; 
+		background-color:rgb(165, 195, 209,0.95);
+		width: 7%;
+		overflow: hidden;
 		height: 60px;
 		}
 	.btn-com{
-		background-color: rgb(160, 38, 109,0.4);
-		width: 7%;  
-		overflow: hidden; 
-		height: 60px;
-		}
-	.btnEdit{
-		background-color: rgb(255, 173, 51,0.7);
-		width: 7%;  
-		overflow: hidden; 
-		height: 60px;
+		background-color: rgb(217, 168, 197,0.95);
+		width: 7%;
+		overflow: hidden;
+		height: 60px;8
 		}
 	.btnIdZakupki{
 		width: 15%;
-		background-color: rgba(50,64,0,0.05);
-		text-overflow: ellipsis; 
+		background-color: rgb(245, 245, 242,0.95);
+		text-overflow: ellipsis;
 		height: 60px;
-		} 
+		}
 	.btnName{
 		width: 30%;
-		background-color: rgba(50,0,160,0.05); 
+		background-color: rgb(245, 242, 250,0.95);
 		height: 60px;
-		}    
+		}
 	.btnCity{
 		width: 12%;
-		background-color: none; 
-		text-overflow: ellipsis; 
+		background-color: rgb(245, 245, 242,0.95);
+		text-overflow: ellipsis;
 		overflow: hidden;
 		height: 60px;
-		} 
+		}
 	.btnPrice{
 		width: 10%;
-		background-color: none; 
-		text-overflow: ellipsis; 
+		background-color: rgb(245, 245, 242,0.95);
+		text-overflow: ellipsis;
 		overflow: hidden;
 		height: 60px;
-		} 
+		}
 	.btnInf{
-		width: 15%;
-		background-color: rgba(50,64,160,0.4); 
-		text-overflow: ellipsis; 
+		width: 16%;
+		background-color: rgb(173, 179, 217,0.95);
+		text-overflow: ellipsis;
 		overflow: hidden;
 		height: 60px;
-		} 
+		}
+		.btnEdit{
+			background-color: rgb(255, 173, 51,0.8);
+			width: 10%;
+			overflow: hidden;
+			height: 60px;
+			}
 	.lower{
 		font-size: 10px;
 		}
-	.btn-group{
-		width:80vw; 
-		margin-right: 2%;
-		margin-left: 2%; 
-		padding-top: 1px;
-		}   
-
 	#feedback {
 		font-size: 5px;
 		}
-		
+
 /* footer*/
 	.wrapper{
-		background-color: #333; 
-		height: 80px; 
-		color: white;
-		} 
-		
+		background-image: linear-gradient(to bottom, #8e8e8e, #434343);
+		background-size: cover;
+		height: 80px;
+		color: lightgrey;
+		}
+
 
 /* Pop ups warnings*/
 	.area {
 	    position: relative;
 	    font-weight: bold;
 		}
-	
+
 	.fixed {
 	    position: absolute;
 	    top: -40px;
 	    left: 293px;
 	    padding: 5px;
-	    z-index: 9999;  
+	    z-index: 9999;
 	    background-color: white;
 	    display: none;
 	    font-size: 20px;
 	    color: rgba(140, 2, 11, 0.8);
 		}
-		
+
 	.popup{
 		position: absolute;
 	    padding: 5px;
-	    top: 50px;
+	    top: 10px;
 	    z-index: 9999;
 	    background-color: white;
 	    display: none;
@@ -159,52 +211,57 @@
 	    color: rgb(149, 153, 150);
 		}
 	}
-	
+
 /* Filters style */
 	.tdFilters {
-		border: 3px solid; 
-		border-color: rgb(0,0,0);  
+		border: 3px solid;
+		border-color: rgb(0,0,0);
 	}
-	.divFilters{
-		
-		}
-	#filtersToggle{
-		width: 100%;
+
+
+	#filtersSection{
+		display:none;
+	}
+
+	.filtersToggle{
 		height: 40px;
-		background: linear-gradient(45deg, rgba(103, 0, 31, .8), rgba(34, 101, 163, .5)); 
- 		background-size: cover;
- 		margin-bottom: 20px;
+		width:100%;
+ 		float: left;
+ 		padding: 0;
+		border: none;
+		color : lightgrey;
+	  background-color: #303030;
+		background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+ 		background-blend-mode: normal, lighten, soft-light;
 		}
-		
-		
-		
-		
-		
-		
-		.dropdown-menu > li > .dropdown-menu-item {
-   clear: both;
-    color: #333;
-    display: block;
-    padding: 3px 20px;
-    white-space: nowrap;
-    margin: 5px 0;
-    width: 100%;
-    text-align: left;
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-    -moz-user-select: none;
-    user-select: none;
-}
-.dropdown-menu > li:hover .dropdown-menu-item,
-.dropdown-menu > li:focus .dropdown-menu-item{
-    background-color: #f5f5f5;
-    color: #262625;
-}
-.dropdown-menu > li > .dropdown-menu-item.checkbox {
-    margin: 0;
-    font-weight: normal;
-}
-.dropdown-menu > li > .dropdown-menu-item.checkbox input {
-    display: none;
-}
+	.filtersToggle:hover {
+	  background-color: #313131;
+	  background-image: linear-gradient(to bottom, #7b7b7b, #2a2a2a);
+		}
+	#btnFilterConfim{
+		width:20%;
+		Height:40px;
+		float: left;
+		background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+		}
+	.filtersContainer{
+		position: relative;
+		Height:42px;
+		z-index: 9999;
+		width:20%;
+		margin:none;
+		float: left;
+		}
+	.dropdown-menu{
+		width:100%;
+		position: absolute;
+	    z-index: 9999;
+	    display: none;
+	    font-size: 20px;
+	    color: rgb(149, 153, 150);
+		float: left;
+		}
+	.priceInputs{
+		width: 45%;
+		border-radius: 3px;
+		}
