--- a/TenderStore1/src/main/webapp/resources/CSS/tenders.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/tenders.css
@@ -6,6 +6,7 @@
 		background-color: rgba(260,260,260, 0.5);
 		overflow:auto;
 		height:40px;
+		position: fixed;
 	}
 	.logo{
 	float:left;
@@ -33,11 +34,6 @@
 		text-align: center;
 		padding-top: 10px;
 	}
-	#filters{
-		float:left;
-		height:100%;
-		width:10%;
-	}
 	
 	#bthAddTender{
 		height:100%;
@@ -61,16 +57,7 @@
 		padding-left: 1%;
 		border-radius: 3px 0px 0px 3px;
 	}
-	#filtersSectionToggle{
-		width: 100%;
-		height: 100%;
-		border: none;
-		background-image: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
-		color : lightgrey;
-		}
-				#filtersSectionToggle:hover{
-					background-image: linear-gradient(to bottom, #a3bded 0%, #6991c7 100%);
-				}
+	
 /* Common*/
 
 	body {
@@ -79,27 +66,18 @@
 		}
 
 
-
-/* colors: info: #ADB3D9, contact:  #F5F2FA, fil: #9EDFA9, cons: #A5C3D1, comp: #D9A8C5, grey: #DDDDDD, # #F5F5F2, */
-
 /* Tenders info*/
-	.btn-group{
-		margin-bottom: 1px; 
-		}
+	
 	.tendersContainer{
 		overflow:auto;
 		margin: 3%;
 		margin-right: 2%;
 		}
-	.overflow{
-		height:10 px;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		}
 	.tbl{
-		width: 99.5%;
+		width: 100%;
 		background-color: rgb(226, 226, 226,0.95);
 		color:black;
+		margin-bottom: 10px;
 		}
 	.tenderTableData {
 		text-align: center;
@@ -110,67 +88,42 @@
 		border-color: rgb(224, 224, 224);
 		margin:25%;
 		}
-	.btn-fil{
-		background-color:rgb(158, 223, 169,0.95);
-		width: 7%;
-		overflow: hidden;
-		height: 60px;
+	
+	/* Tenders information blocks */
+	.tendcont{
+				height: 60px;
+				text-align: center;
+				vertical-align: middle;
+				line-height: 60px;
+				margin-bottom: 1px;
 		}
-	.btn-con{
-		background-color:rgb(165, 195, 209,0.95);
-		width: 7%;
-		overflow: hidden;
-		height: 60px;
-		}
-	.btn-com{
-		background-color: rgb(217, 168, 197,0.95);
-		width: 7%;
-		overflow: hidden;
-		height: 60px;8
-		}
-	.btnIdZakupki{
-		width: 15%;
-		background-color: rgb(245, 245, 242,0.95);
-		text-overflow: ellipsis;
-		height: 60px;
-		}
-	.btnName{
-		width: 30%;
-		background-color: rgb(245, 242, 250,0.95);
-		height: 60px;
-		}
-	.btnCity{
-		width: 12%;
-		background-color: rgb(245, 245, 242,0.95);
-		text-overflow: ellipsis;
-		overflow: hidden;
-		height: 60px;
-		}
-	.btnPrice{
-		width: 10%;
-		background-color: rgb(245, 245, 242,0.95);
-		text-overflow: ellipsis;
-		overflow: hidden;
-		height: 60px;
-		}
-	.btnInf{
-		width: 16%;
-		background-color: rgb(173, 179, 217,0.95);
-		text-overflow: ellipsis;
-		overflow: hidden;
-		height: 60px;
-		}
-		.btnEdit{
-			background-color: rgb(255, 173, 51,0.8);
-			width: 10%;
+		/* Div of tenders info */
+		.tend{
+			height:inherit;
+			border: none;
+			float:left;
 			overflow: hidden;
-			height: 60px;
-			}
+		}
+		/* Blocks and buttons with tenders information */
+		.tendStageFill{border-radius: 5px 0px 0px 5px;width: 7%; background-color:rgb(158, 223, 169,0.95);}
+		.tendStageCons{border-radius: 5px 0px 0px 5px;width: 7%; background-color:rgb(165, 195, 209,0.95);}
+		.tendStageCompl{border-radius: 5px 0px 0px 5px;width: 7%; background-color: rgb(217, 168, 197,0.95);}
+		.tendid{width: 15%; background-color: rgb(245, 245, 242,0.95); cursor: pointer;}.tendid:hover{background-color: rgb(245, 245, 242,0.9);}
+		.tendName{width: 30%;background-color: rgb(245, 242, 250,0.95); border-left: 1px solid rgb(260, 260, 260,0.6); cursor: pointer;}.tendName:hover{background-color: rgb(245, 242, 250,0.9);}
+		.tendCity{width: 12%;	background-color: rgb(245, 245, 242,0.95); border-left: 1px solid rgb(260, 260, 260,0.6);}
+		.tendPrice{width: 10%; 	background-color: rgb(245, 245, 242,0.95); border-left: 1px solid rgb(260, 260, 260,0.6);}
+		.tendInf{width: 16%; background-color: rgb(173, 179, 217,0.95); border-left: 1px solid rgb(260, 260, 260,0.6); cursor: pointer;}.tendInf:hover{background-color: rgb(173, 179, 217,0.9);} 
+		.tendEdit{width: 10%; background-color: rgb(255, 173, 51,0.8);border-radius: 0px 5px 5px 0px; cursor: pointer;}
+	
 	.lower{
 		font-size: 10px;
 		}
-	#feedback {
-		font-size: 5px;
+	#popUps {
+		font-size: 20px;
+		height:80px;
+		color:black;
+		margin-top:80px;
+		width:200px;
 		}
 
 /* footer*/
@@ -178,7 +131,7 @@
 		background-image: linear-gradient(to bottom, #8e8e8e, #434343);
 		background-size: cover;
 		height: 80px;
-		color: lightgrey;
+		color: lightgrey; 
 		}
 
 
@@ -212,56 +165,3 @@
 		}
 	}
 
-/* Filters style */
-	.tdFilters {
-		border: 3px solid;
-		border-color: rgb(0,0,0);
-	}
-
-
-	#filtersSection{
-		display:none;
-	}
-
-	.filtersToggle{
-		height: 40px;
-		width:100%;
- 		float: left;
- 		padding: 0;
-		border: none;
-		color : lightgrey;
-	  background-color: #303030;
-		background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
- 		background-blend-mode: normal, lighten, soft-light;
-		}
-	.filtersToggle:hover {
-	  background-color: #313131;
-	  background-image: linear-gradient(to bottom, #7b7b7b, #2a2a2a);
-		}
-	#btnFilterConfim{
-		width:20%;
-		Height:40px;
-		float: left;
-		background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
-		}
-	.filtersContainer{
-		position: relative;
-		Height:42px;
-		z-index: 9999;
-		width:20%;
-		margin:none;
-		float: left;
-		}
-	.dropdown-menu{
-		width:100%;
-		position: absolute;
-	    z-index: 9999;
-	    display: none;
-	    font-size: 20px;
-	    color: rgb(149, 153, 150);
-		float: left;
-		}
-	.priceInputs{
-		width: 45%;
-		border-radius: 3px;
-		}
