--- a/TenderStore1/src/main/webapp/resources/CSS/updateTender.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/updateTender.css
@@ -1,32 +1,43 @@
 @charset "UTF-8";
 
-<!-- Navigation -->
 
-	.navbar-fixed-bottom{
-		background-color: #333; 
-		}
-	#nav1{
-		background-image: none;
-		}  
-	#AddTender{
-		background-color: rgba(30,75,39,0.5); 
-		color: white;
-		}
-	#new{
-		word-break: break-all;
-		}
-	#search-form{
-		padding-top:9px; 
-		margin-left:25%;
-		}
+
+	#header{
+		width: 100%;
+		background-color: rgba(260,260,260, 0.5);
+		overflow:auto;
+		height:40px;
+	} 
+	.logo{
+	float:left;
+	}
+	#home{
+		height:100%;
+		width: 100%;
+		border: none;
+		float:left;
+		background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
+ 		background-blend-mode: normal, lighten, soft-light;
+	}
+	.headerSection{
+		height:100%;
+		float:left;
+		width:7%;
+	}
+	.headerSectionRight{
+		height:100%;
+		float:right;
+		width:6%;
+		background-color: rgba(260,260,260, 0.5);
+		border-right: 1px solid darkgrey;
+		text-align: center;
+		padding-top: 10px;
+	}
 	
 <!-- Edit section-->
 
-	body {  
-		padding-top: none;
-		height: 100%;  
-		text-align: center;  
-		}
+	body {
+  } 
 	.tbl{
 		width: 100%;
 		}
@@ -35,13 +46,13 @@
 		}
 		
 		.mainDiv{
-		border: 1px solid; 
-		border-color: rgb(220, 220, 220);
 		border-radius: 7px;
 		width:90%;
 		margin-left:5%;
-		background-color: rgb(247, 247, 247);
+		margin-top:2%;
+		background-color: rgb(220, 220, 220,0.85);
 		float: left;
+   		padding: 3%;
 	}
 	.shadow{
 		-moz-box-shadow: 5px 5px 5px rgb(224, 224, 224);
