--- a/TenderStore1/src/main/webapp/resources/CSS/tender.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/tender.css
@@ -8,7 +8,7 @@
 		overflow:auto;
 		height:40px;
 	}
-	.logo{
+	.logo{ 
 	float:left;
 	}
 	#home{
@@ -25,6 +25,7 @@
 		width:7%;
 	}
 	.headerSectionRight{
+		overflow:hidden;
 		float:right;
 		height:100%;
 		width:6%;
