--- a/TenderStore1/src/main/webapp/resources/CSS/tenders.css
+++ b/TenderStore1/src/main/webapp/resources/CSS/tenders.css
@@ -1,63 +1,77 @@
 @charset "UTF-8";
 
 /* Navigation*/
-	#header{
-		width: 100%;
-		background-color: rgba(260,260,260, 0.5);
-		overflow:auto;
-		height:40px;
-		position: fixed;
-	}
-	.logo{
+#header{
+	width: 100%;
+	background-color: rgba(260,260,260, 0.5);
+	overflow:auto;
+	height:40px;
+	position: fixed;
+	z-index: 3;
+}
+.logo{
+float:left;
+}
+#home{
+	height:100%;
+	width: 100%;
+	border: none;
 	float:left;
-	}
-	#home{
-		height:100%;
-		width: 100%;
-		border: none;
+	background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
+	background-blend-mode: normal, lighten, soft-light;
+}
+.headerSection{
+	float:left;
+	height:100%;
+	width:80px;
+
+}
+.headerSectionRight{
+	float:right;
+	height:100%;
+	width:6%;
+	background-color: rgba(260,260,260, 0.5);
+	border-right: 1px solid darkgrey;
+	text-align: center;
+	padding-top: 10px;
+}
+
+#bthAddTender{
+	height:100%;
+	float:left;
+	width:5%;
+	border: none;
+	border-radius: 0px 3px 3px 0px;
+	background-image: linear-gradient(to top, #0ba360 0%, #3cba92 60%);
+	color: white;
+	float:left;
+	min-width: 50px;
+	}#bthAddTender:hover{
+		background-image: linear-gradient(to bottom, #0ba360 0%, #3cba92 60%);
 		float:left;
-		background-image: linear-gradient(to left, #BDBBBE 0%, #9D9EA3 100%), radial-gradient(88% 271%, rgba(255, 255, 255, 0.25) 0%, rgba(254, 254, 254, 0.25) 1%, rgba(0, 0, 0, 0.25) 100%), radial-gradient(50% 100%, rgba(255, 255, 255, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%);
- 		background-blend-mode: normal, lighten, soft-light;
 	}
-	.headerSection{
-		float:left;
-		height:100%;
-		width:7%;
-		
+#tenderId{
+	height:100%;
+	border: none;
+	background-color: white;
+	float:left;
+	width:30%;
+	padding-left: 1%;
+	border-radius: 3px 0px 0px 3px;
+}
+
+#filtersSectionToggle{
+	width: 100%;
+	height: 100%;
+	border: none;
+	float:left;
+	background-image: linear-gradient(to top, #a3bded 0%, #6991c7 100%);
+	color : lightgrey;
 	}
-	.headerSectionRight{
-		float:right;
-		height:100%;
-		width:6%;
-		background-color: rgba(260,260,260, 0.5);
-		border-right: 1px solid darkgrey;
-		text-align: center;
-		padding-top: 10px;
-	}
-	
-	#bthAddTender{
-		height:100%;
-		float:left;
-		width:5%;
-		border: none;
-		border-radius: 0px 3px 3px 0px;
-		background-image: linear-gradient(to top, #0ba360 0%, #3cba92 60%);
-		color: white;
-		float:left;
-		}#bthAddTender:hover{
-			background-image: linear-gradient(to bottom, #0ba360 0%, #3cba92 60%);
-			float:left;
-		}
-	#tenderId{
-		height:100%;
-		border: none;
-		background-color: white;
-		float:left;
-		width:30%;
-		padding-left: 1%;
-		border-radius: 3px 0px 0px 3px;
-	}
-	
+			#filtersSectionToggle:hover{
+				background-image: linear-gradient(to bottom, #a3bded 0%, #6991c7 100%);
+			}
+
 /* Common*/
 
 	body {
@@ -67,17 +81,24 @@
 
 
 /* Tenders info*/
-	
+
 	.tendersContainer{
 		overflow:auto;
 		margin: 3%;
-		margin-right: 2%;
+		margin-top: 30px;
+		margin-bottom: 30px;
 		}
+	#tendersFilingContainer{
+		margin-top:50px;
+	}
 	.tbl{
 		width: 100%;
 		background-color: rgb(226, 226, 226,0.95);
 		color:black;
 		margin-bottom: 10px;
+		}
+		.collapser{
+			display:none;
 		}
 	.tenderTableData {
 		text-align: center;
@@ -88,7 +109,7 @@
 		border-color: rgb(224, 224, 224);
 		margin:25%;
 		}
-	
+
 	/* Tenders information blocks */
 	.tendcont{
 				height: 60px;
@@ -105,16 +126,16 @@
 			overflow: hidden;
 		}
 		/* Blocks and buttons with tenders information */
-		.tendStageFill{border-radius: 5px 0px 0px 5px;width: 7%; background-color:rgb(158, 223, 169,0.95);}
-		.tendStageCons{border-radius: 5px 0px 0px 5px;width: 7%; background-color:rgb(165, 195, 209,0.95);}
-		.tendStageCompl{border-radius: 5px 0px 0px 5px;width: 7%; background-color: rgb(217, 168, 197,0.95);}
+		.tendStageFill{border-radius: 5px 0px 0px 5px;width: 7%; background-color:rgb(158, 223, 169,0.95); font-size:11px;}
+		.tendStageCons{border-radius: 5px 0px 0px 5px;width: 7%; background-color:rgb(165, 195, 209,0.95);font-size:11px;}
+		.tendStageCompl{border-radius: 5px 0px 0px 5px;width: 7%; background-color: rgb(217, 168, 197,0.95);font-size:11px;}
 		.tendid{width: 15%; background-color: rgb(245, 245, 242,0.95); cursor: pointer;}.tendid:hover{background-color: rgb(245, 245, 242,0.9);}
 		.tendName{width: 30%;background-color: rgb(245, 242, 250,0.95); border-left: 1px solid rgb(260, 260, 260,0.6); cursor: pointer;}.tendName:hover{background-color: rgb(245, 242, 250,0.9);}
 		.tendCity{width: 12%;	background-color: rgb(245, 245, 242,0.95); border-left: 1px solid rgb(260, 260, 260,0.6);}
 		.tendPrice{width: 10%; 	background-color: rgb(245, 245, 242,0.95); border-left: 1px solid rgb(260, 260, 260,0.6);}
-		.tendInf{width: 16%; background-color: rgb(173, 179, 217,0.95); border-left: 1px solid rgb(260, 260, 260,0.6); cursor: pointer;}.tendInf:hover{background-color: rgb(173, 179, 217,0.9);} 
+		.tendInf{width: 16%; background-color: rgb(173, 179, 217,0.95); border-left: 1px solid rgb(260, 260, 260,0.6); cursor: pointer;}.tendInf:hover{background-color: rgb(173, 179, 217,0.9);}
 		.tendEdit{width: 10%; background-color: rgb(255, 173, 51,0.8);border-radius: 0px 5px 5px 0px; cursor: pointer;}
-	
+
 	.lower{
 		font-size: 10px;
 		}
@@ -130,8 +151,8 @@
 	.wrapper{
 		background-image: linear-gradient(to bottom, #8e8e8e, #434343);
 		background-size: cover;
-		height: 80px;
-		color: lightgrey; 
+		height: 30px;
+		color: lightgrey;
 		}
 
 
@@ -152,16 +173,110 @@
 	    font-size: 20px;
 	    color: rgba(140, 2, 11, 0.8);
 		}
-
-	.popup{
+	.notification{
 		position: absolute;
-	    padding: 5px;
-	    top: 10px;
-	    z-index: 9999;
-	    background-color: white;
-	    display: none;
-	    font-size: 15px;
-	    color: rgb(149, 153, 150);
-		}
+		width: 30%;
+		bottom: 15%;
+		right: 10%;
+		z-index: 9999;
+		background-color: #08626fe8;
+		display: none;
+		font-size: 16px;
+		color: #171717;
+		padding: 3%;
+		font-family:-webkit-body;
+		font-weight:bold;
 	}
 
+	/* Filters style */
+	.tdFilters {
+		border: 3px solid;
+		border-color: rgb(0,0,0);
+	}
+
+
+	#filtersSection{
+		display:none;
+		padding-top:20px;
+		width:100%;
+		position:fixed;
+		z-index: 2;
+	}
+
+	.filtersToggle{
+		height: 30px;
+		width:100%;
+ 		float: left;
+ 		padding: 0;
+		border: none;
+		color : lightgrey;
+	  background-color: #303030;
+		background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+ 		background-blend-mode: normal, lighten, soft-light;
+		}
+	.filtersToggle:hover {
+	  background-color: #313131;
+	  background-image: linear-gradient(to bottom, #7b7b7b, #2a2a2a);
+		}
+	#btnFilterConfim{
+		width:20%;
+		Height:30px;
+		float: left;
+		background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+		}
+	.filtersContainer{
+		position: relative;
+		Height:30px;
+		z-index: 9999;
+		width:20%;
+		margin:none;
+		float: left;
+		}
+	.dropdown-menu{
+		width:100%;
+		position: absolute;
+	    z-index: 9999;
+	    display: none;
+	    font-size: 20px;
+	    color: rgb(149, 153, 150);
+		float: left;
+		background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+		}
+	.priceInputs{
+		width: 45%;
+		border-radius: 3px;
+		}
+	.options{
+		height: 100%;
+		width:100%;
+		border: none;
+		color : lightgrey;
+		background-color: #303030;
+		background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+		background-blend-mode: normal, lighten, soft-light;
+		}
+		.buttonWrapper{
+			height: 30px;;
+		}
+
+
+	@media screen and (max-width: 1000px) {
+	    .tendCity{
+				display:none;
+			}
+			.notification{
+				width: 50%;
+			}
+		.tendid{
+			width:27%
+		}
+
+	}
+   @media (max-width:700px) and (min-width:10px) {
+    .tendPrice {
+        display:none;
+    }
+    .tendid{
+			width:37%
+		}
+   }
